# mg_model

./: .coveragerc  .gitignore  .readthedocs.yml  AUTHORS.rst  CHANGELOG.rst  CONTRIBUTING.rst  LICENSE.txt  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
docs/: conf.py  requirements.txt
src/mg_model/: __init__.py  authToken.py  island.py  melee.py  serializer.py  serializers.py  skeleton.py  token.py  user.py
src/mg_model/Entities/: __init__.py  entity.py  instancedEntity.py
src/mg_model/Entities/Actors/: __init__.py  actor.py  player.py
src/mg_model/Exceptions/: __init__.py  exceptions.py
src/mg_model/Serializers/: __init__.py
src/mg_model/Validators/: __init__.py  validators.py
tests/: conftest.py  test_skeleton.py
